[package]
name = "hibout"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
anyhow = { version = "1.0.71", features = ["backtrace"] }
async-trait = "0.1.68"
config = { version = "0.13.3", default-features = false, features = ["yaml"] }
derive-new = "0.5.9"
erased-serde = "0.3.25"
futures = "0.3.28"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.97"
tera = { version = "1.18.1", default-features = false }
tokio = { version = "1.28.0", features = ["full"] }
tracing = { version = "0.1.37", features = ["log"] }
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
walkdir = "2.3.3"

[profile.release]
lto = true
